# thinkdeep

./: .gitignore  README.md  ThinkDeep_Product_Plan.xlsx  ThinkDeep_Setup_Guide.docx  agents.md  app.py  codex.md  config.py  graph.py  main.py  pyproject.toml  science_topics.py  session.py  state.py  stories.py
api/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AmbientCanvas.tsx  Nav.tsx
frontend/src/lib/: api.ts  storage.ts
frontend/src/pages/: HistoryView.tsx  HomePage.tsx  ReflectionView.tsx
nodes/: coach.py  evaluator.py  explore.py  reporter.py  socratic.py  wisdom_reporter.py
science_topics/: black_holes.txt  human_brain.txt  time_dilation.txt
stories/: happy_prince.txt  nightingale_rose.txt  selfish_giant.txt
tests/: test_coach.py  test_evaluator.py  test_graph.py  test_reporter.py
wisdom/: wisdom_entries.py
