[project]
name = "thinkdeep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.1.10",
    "langsmith>=0.8.0",
    "ollama>=0.6.2",
    "pydantic>=2.13.3",
    "streamlit>=1.57.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]
